Fixed some errors and put width and height to 100% in the icons

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,10 +4,10 @@ import Icon from '../components/Icon.astro'
 ---
 
 <Layout title="Welcome to Astro.">
-	<div class="flex w-[700px] hover:bg-slate-300">
-		<Icon iconName='Instagram' fill="white"/>
-		<Icon iconName='Twitter' fill="white"/>
-		<Icon iconName='LinkedIn' fill="white"/>
+	<div class="flex w-full hover:bg-blue-300">
+		<Icon iconName='Instagram' style='fill-white w-16'/>
+		<Icon iconName='Twitter' style='fill-white w-16'/>
+		<Icon iconName='LinkedIn' style='fill-white w-16'/>
 	</div>
 </Layout>
 
