--- a/src/components/SocialMediaDonut.astro
+++ b/src/components/SocialMediaDonut.astro
@@ -4,17 +4,36 @@ import Icon from '@/components/Icon.astro'
 interface Props {
   size? : string;
   iconSize?: string;
+  showCircle?: boolean;
+  rotation?: 'left' | 'right';
+  startAngle?: number;
+  totalAngle?: number;
 }
-const {size = '200px', iconSize = '30px'} = Astro.props;
+const {size = '200px', 
+      iconSize = '30px',
+      showCircle = false,
+      rotation = 'right',
+      startAngle = 90,
+      totalAngle = 360,
+} = Astro.props;
+
+let rotationValue = rotation === 'left' ? -1 : 1;
 ---
 <div 
-  class={"donut relative flex flex-row justify-center items-center"}
+  class="donut relative flex flex-row justify-center items-center"
   style=`width:${size}; height: ${size}`
   >
   {socialMedia.map(({network, username, url, color}, index) => (
     <div 
       class="element absolute bg-gray-500 rounded-full flex items-center justify-center"
-      style={`--bg-hover-color: ${color};width: ${iconSize}; height: ${iconSize};transform: rotate(${(index * 360 / socialMedia.length)-90}deg) translate(${(parseInt(size) - parseInt(iconSize))/2}px) rotate(-${(index * 360 / socialMedia.length)+270}deg);`}
+      style={`
+        --bg-hover-color: ${color};
+        width: ${iconSize}; 
+        height: ${iconSize};
+        transform: rotate(${(rotationValue * (index * 360 / socialMedia.length)) - startAngle}deg) 
+                   translate(${(parseInt(size) - parseInt(iconSize))/2}px) 
+                   rotate(-${(rotationValue * (index * 360 / socialMedia.length))+(rotation === 'right'? (360 - startAngle) : ((360 - startAngle) + 360))}deg);
+      `}
       >
       <a class="w-full rounded-full" href={`${url}`} target="_blank" rel="noopener noreferrer">
         <Icon 
@@ -24,17 +43,18 @@ const {size = '200px', iconSize = '30px'} = Astro.props;
       </a>
     </div>
   ))}
-  <div 
-    class="circle-container w-full h-full"
-    style=`padding: ${(parseInt(iconSize) / 2)}px`>
-    <div class="circle flex flex-row justify-center items-center rounded-full border border-white w-full h-full">
-      <h1 class="text-white">Hola</h1>
+  {showCircle ? (
+    <div 
+      class="circle-container w-full h-full"
+      style={`padding: ${(parseInt(iconSize) / 2)}px`}>
+      <div class="circle flex flex-row justify-center items-center rounded-full border border-white w-full h-full">
+      </div>
     </div>
-  </div>
+  ): (<></>)}
 </div>
 
 <style>
   .element:hover {
-    background-color: var(--bg-hover-color, red);
+    background-color: var(--bg-hover-color, black);
   }
 </style>
