--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,9 +4,14 @@ import SocialMediaDonut from '@/components/SocialMediaDonut.astro'
 ---
 
 <Layout title="Welcome to Astro.">
-	<h1>Hola</h1>
-	<SocialMediaDonut size='300px' iconSize='60px'>
-	</SocialMediaDonut>
+	<SocialMediaDonut 
+		size='300px' 
+		iconSize='40px' 
+		showCircle={true} 
+		rotation='left'
+		startAngle={90}
+		totalAngle={270}
+	></SocialMediaDonut>
 </Layout>
 
 <style>
